force-app/main/default/objects/Market_Object_Vendor__c/Market_Object_Vendor__c.object-meta.xml
<CustomObject>
    <description>Used to track markets/regions by vendor, may expand to other things as well.</description>
    <label>Vendor Market</label>
    <nameField>
        <label>Market Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>