force-app/main/default/objects/Market_Object_Vendor__c/fields/Divestiture_Site_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site Lookup</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Vendor Markets</relationshipLabel>
    <relationshipName>Vendor_Markets1</relationshipName>
    <type>Lookup</type>
</CustomField>