force-app/main/default/objects/Market_Object_Vendor__c/fields/Due_Diligence_Package__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Diligence Package</label>
    <referenceTo>Due_Diligence_Package__c</referenceTo>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>