force-app/main/default/objects/Market_Object_Vendor__c/fields/Lease_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Abstract</label>
    <referenceTo>Lease_Abstract__c</referenceTo>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>