force-app/main/default/objects/Market_Object_Vendor__c/fields/Lease_Neg_Market__c.field-meta.xml
<CustomField>
    <fullName>Lease_Neg_Market__c</fullName>
    <label>Lease Neg Market</label>
    <length>60</length>
    <type>Text</type>
</CustomField>