force-app/main/default/objects/Market_Object_Vendor__c/fields/Lease_Negotiation_lookup__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation lookup</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>