force-app/main/default/objects/Market_Object_Vendor__c/fields/Vendor_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>